--- a/style.css
+++ b/style.css
@@ -19,33 +19,91 @@
 
 .urlsearch{
     width:48%;
-    height: 50px;
+    height: 38px;
     font-size: 18px;
     font-weight: 300;
     padding: 9px 14px;
     color: #7f898e;
-    border-radius: 10px;
+    border-radius: 12px;
     border:none;
-    box-shadow: 0px 1px 2px #fff;
+}
+.urloutput{
+    width:48%;
+    height: 38px;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 9px 14px;
+    color: #7f898e;
+    border-radius: 12px;
+    border:none;
+}
+.center_output{
+    display: none;
 }
 
-.but{
-    width:125px;
-    height: 65px;
+.duration{
+    width: 200px;
+    height: 53px;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 9px 14px;
+    margin-left: 10px;
+    color: #7f898e;
+    border-radius: 12px;
+    border:none;
+}
+.duration_value{
+    width: 260px;
+    height: 38px;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 9px 14px;
+    margin-left: 10px;
+    color: #7f898e;
+    border-radius: 12px;
+    border:none;
+}
+.copy{
+    width:100px;
+    height: 40px;
     font-size: 18px;
     font-weight: 300;
     background: #3498db;
     color: white;
-    border-radius: 10px;
+    border-radius: 60px;
     border:none;
     text-align: center;
 }
 
+.shorten{
+    width:125px;
+    height: 40px;
+    font-size: 18px;
+    font-weight: 300;
+    background: #3498db;
+    color: white;
+    border-radius: 60px;
+    border:none;
+    text-align: center;
+}
+
+
+
 .output{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 60px;
-    color: white;
-    display: none;
-
 }
 
+.user_count{
+    position: absolute;
+    top: 0%;
+    right: 3%;
+    color: #3CC8B1;
+    font-family: 'Lato', sans-serif;
+}
+select:focus {
+    outline: none !important;
+}
+input:focus {
+    outline: none !important;
+}
