updating of source files

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .main_body{
-    background: url('background.jpg');
+    background: url('Images/background.jpg');
     background-size: cover;
 }
 
